use URI as persistence for elastic search url
URI can be easier compared
some minor changes in tests